--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@material-ui/core": "^4.2.1",
     "firebase": "^6.3.4",
     "firebaseui": "^4.1.0",
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.3",
+    "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -31,6 +34,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --single-quote --trailing-comma --write",
+      "git add"
     ]
   }
 }
