--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/pickers": "^3.2.4",
     "firebase": "^6.3.4",
     "firebaseui": "^4.1.0",
     "husky": "^3.0.4",
