--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.2.1",
     "@material-ui/pickers": "^3.2.4",
+    "date-fns": "^2.0.1",
     "firebase": "^6.3.4",
     "firebaseui": "^4.1.0",
     "husky": "^3.0.4",
