--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
       "prettier --single-quote --trailing-comma --write",
       "git add"
     ]
+  },
+  "devDependencies": {
+    "react-snapshot": "^1.3.0"
   }
 }
